--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,69 +1,72 @@
 ext.versions = [
-        minSdk               : 23,
-        compileSdk           : 30,
-        versionCode          : 1,
-        versionName          : '0.0.1',
-        buildToolsVersion    : '30.0.3',
+        minSdk                   : 23,
+        compileSdk               : 30,
+        versionCode              : 1,
+        versionName              : '0.0.1',
+        buildToolsVersion        : '30.0.3',
 
-        gradleBuildTool      : '7.0.0-alpha05',
-        kotlin               : '1.4.21',
+        gradleBuildTool          : '7.0.0-alpha08',
+        kotlin                   : '1.4.21',
 
         // material
-        materialVersion      : '1.3.0',
+        materialVersion          : '1.3.0',
 
         // appcompat
-        appcompat            : '1.2.0',
+        appcompat                : '1.2.0',
 
         // androidx jetpack
-        constraintVersion    : '2.0.2',
-        coreKtx              : '1.3.2',
+        constraintVersion        : '2.0.2',
+        coreKtx                  : '1.3.2',
 
         // architecture components
-        fragmentVersion      : '1.3.0',
-        lifecycleVersion     : '2.3.0',
-        lifecycleRuntimeKtx  : '2.3.0-alpah06',
-        roomVersion          : '2.2.6',
-        archCompomentVersion : '2.1.0',
-        lifecycleExtensionVersion     : '2.2.0',
+        fragmentVersion          : '1.3.0',
+        lifecycleVersion         : '2.3.0',
+        lifecycleRuntimeKtx      : '2.3.0-alpah06',
+        roomVersion              : '2.2.6',
+        archCompomentVersion     : '2.1.0',
+        lifecycleExtensionVersion: '2.2.0',
 
         // di
-        hiltCoreVersion      : '2.31-alpha',
-        hiltVersion          : '1.0.0-alpha03',
+        hiltCoreVersion          : '2.31-alpha',
+        hiltVersion              : '1.0.0-alpha03',
 
         // network
-        retrofitVersion      : '2.9.0',
-        okhttpVersion        : '4.7.2',
-        retrofitConverter    : '2.4.0',
+        retrofitVersion          : '2.9.0',
+        okhttpVersion            : '4.7.2',
+        retrofitConverter        : '2.4.0',
 
         // coroutines
-        coroutinesVersion    : '1.4.0',
+        coroutinesVersion        : '1.4.0',
 
         // state ui
-        mavericks            : '2.0.0',
+        mavericks                : '2.0.0',
 
         // navigation
-        navigation           : '2.3.3',
-        epoxy                : '4.3.1',
+        navigation               : '2.3.3',
+        epoxy                    : '4.3.1',
 
         // lottie
-        lottie               : '3.6.0',
+        lottie                   : '3.6.0',
 
         // ui
-        constraintLayout     : '2.0.4',
-        coil                 : '1.1.1',
+        constraintLayout         : '2.0.4',
+        coil                     : '1.1.1',
 
         // mutidex
-        multidex             : '2.0.1',
+        multidex                 : '2.0.1',
+
+        //compose
+        composeVersion           : '1.0.0-beta01',
 
         // unit test
-        junitVersion         : '4.12',
-        mockitoKotlinVersion : '2.2.0',
-        mockitoCore          : '3.3.3',
-        coreTesting          : '2.1.0',
-        kotlinxCoroutinesTest: '1.3.4',
-        androidxTest         : '1.3.0',
-        androidxTestJunit    : '1.1.2',
-        androidTestRunner    : '1.3.0-beta01',
-        mockitoInlineVersion : '3.5.13',
-        turbineVersion       : '0.2.0'
+        junitVersion             : '4.12',
+        mockitoKotlinVersion     : '2.2.0',
+        mockitoCore              : '3.3.3',
+        coreTesting              : '2.1.0',
+        kotlinxCoroutinesTest    : '1.3.4',
+        androidxTest             : '1.3.0',
+        androidxTestJunit        : '1.1.2',
+        androidTestRunner        : '1.3.0-beta01',
+        mockitoInlineVersion     : '3.5.13',
+        turbineVersion           : '0.2.0'
 ]
