--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -1,6 +1,7 @@
 name: Android CD
 
 on:
+  pull_request:
   push:
     branches:
       - master
@@ -10,7 +11,6 @@ on:
 jobs:
   apk:
     name: Generate APK
-    needs: test
     runs-on: macos-latest
     steps:
       - name: Checkout
