--- a/.github/workflows/android-deploy.yml
+++ b/.github/workflows/android-deploy.yml
@@ -13,14 +13,13 @@ jobs:
     name: Generate APK
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Setup JDK
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: "building apk"
-        uses: vgaidarji/android-github-actions-build@v1.0.1
-        with:
-          args: "./gradlew assembleDebug"
+      - name: Building APK
+          run ./gradlew assembleDebug
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
